# Cognitive-Robotics-Final-Project

./: .gitignore  .gitmodules  CppProject.cpp  README.md  cluster_rgbd_data.py  depth_data.txt  depth_data2.txt  grasp_generator.py  object_matching.py  plot_depth_data.py  plot_depth_data2.py  requirements.txt  segmenter.py  segmenter_kmeans.py  segmenter_watershed.py  simulation.py  summarizeResults.py  testC.cpp  utils.py
GOOD/: CMakeLists.txt  main.cpp
envCogRob/: pyvenv.cfg
envCogRob/Scripts/: activate  activate.bat
environment/: env.py
pointclouds/: image.pcd
results/: results scenario packed segmenter kmeans, matching CGR_ConvNet, grasping network CGR_ConvNet.csv  results scenario packed segmenter kmeans, matching GOOD, grasping network CGR_ConvNet 2.csv  results scenario packed segmenter kmeans, matching mobileNetV2, grasping network CGR_ConvNet.csv  results scenario packed segmenter synthetic, matching CGR_ConvNet, grasping network CGR_ConvNet.csv  results scenario packed segmenter synthetic, matching GOOD, grasping network CGR_ConvNet 1.csv  results scenario packed segmenter synthetic, matching mobileNetV2, grasping network CGR_ConvNet 1.csv  results scenario packed segmenter synthetic, matching mobileNetV2, grasping network CGR_ConvNet 2.csv  results scenario packed segmenter watershed, matching CGR_ConvNet, grasping network CGR_ConvNet 1.csv  results scenario packed segmenter watershed, matching GOOD, grasping network CGR_ConvNet.csv  results scenario packed segmenter watershed, matching GR_ConvNet, grasping network CGR_ConvNet.csv  summary.csv  (+11 more)
(+33 files in other folders)
